// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach-parent.jsx 1`] = `
<DocumentFragment>
  <div
    style="position: relative; height: 400px; padding: 48px; overflow: hidden; background: rgb(250, 250, 250); border: 1px solid #ebedf0; border-radius: 2px;"
  >
    <div
      class="tdesign-demo-block-column"
      style="transition: margin 300ms cubic-bezier(0.7, 0.3, 0.1, 1) 0s;"
    >
      <p>
        渲染在当前元素中。
      </p>
      <div>
        <span>
          抽屉弹出方向：
        </span>
        <div
          class="t-radio-group t-radio-group-medium t-radio-group-outline"
        >
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
              value="left"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              left
            </span>
          </label>
          <label
            class="t-radio-button t-is-checked"
          >
            <input
              checked=""
              class="t-radio-button__former"
              readonly=""
              type="radio"
              value="right"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              right
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
              value="top"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              top
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
              value="bottom"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              bottom
            </span>
          </label>
        </div>
      </div>
      <div>
        <span>
          抽屉弹出模式：
        </span>
        <div
          class="t-radio-group t-radio-group-medium t-radio-group-outline"
        >
          <label
            class="t-radio-button t-is-checked"
          >
            <input
              checked=""
              class="t-radio-button__former"
              readonly=""
              type="radio"
              value="push"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              push
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
              value="overlay"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              overlay
            </span>
          </label>
        </div>
      </div>
      <div>
        <button
          class="t-button t-button--theme-primary t-button--variant-base"
          style="position: relative;"
        >
          <span
            class="t-button__text"
          >
            Open
          </span>
        </button>
      </div>
      <div>
        <div
          class="t-drawer t-drawer-right t-drawer-attach"
          tabindex="0"
        >
          <div
            class="t-drawer__mask"
          />
          <div
            class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
            style="width: 300px;"
          >
            <div
              class="t-drawer__close-btn"
            >
              <svg
                class="t-icon t-icon-close t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-drawer__header"
            >
              Drawer
            </div>
            <div
              class="t-drawer__body"
            >
              <p>
                This is a drawer
              </p>
            </div>
            <div
              class="t-drawer__footer"
            >
              <div
                style="display: flex; justify-content: flex-start;"
              >
                <button
                  class="t-drawer-confirm t-button t-button--theme-primary t-button--variant-base"
                  style="position: relative;"
                >
                  <span
                    class="t-button__text"
                  >
                    确认
                  </span>
                </button>
                <button
                  class="t-drawer-cancel t-button t-button--theme-default t-button--variant-base"
                  style="position: relative;"
                >
                  <span
                    class="t-button__text"
                  >
                    取消
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open a Drawer
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer-right"
        tabindex="0"
      >
        <div
          class="t-drawer__mask"
        />
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
          style="width: 300px;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            这是标题
          </div>
          <div
            class="t-drawer__body"
          >
            <p>
              This is a drawer
            </p>
          </div>
          <div
            class="t-drawer__footer"
          >
            <div
              style="display: flex; justify-content: flex-start;"
            >
              <button
                class="t-drawer-confirm t-button t-button--theme-primary t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  确认
                </span>
              </button>
              <button
                class="t-drawer-cancel t-button t-button--theme-default t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  取消
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer-right"
        tabindex="0"
      >
        <div
          class="t-drawer__mask"
        />
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
          style="width: 300px;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            <div>
              自定义头部
            </div>
          </div>
          <div
            class="t-drawer__body"
          >
            <div>
              自定义内容
            </div>
          </div>
          <div
            class="t-drawer__footer"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                自定义底部按钮
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`destroy.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer-right"
        tabindex="0"
      >
        <div
          class="t-drawer__mask"
        />
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
          style="width: 300px;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__body"
          >
            <p>
              This is a drawer
            </p>
          </div>
          <div
            class="t-drawer__footer"
          >
            <div
              style="display: flex; justify-content: flex-start;"
            >
              <button
                class="t-drawer-confirm t-button t-button--theme-primary t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  确认
                </span>
              </button>
              <button
                class="t-drawer-cancel t-button t-button--theme-default t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  取消
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`no-mask.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer-right t-drawer-no-mask"
        tabindex="0"
      >
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
          style="width: 300px;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            标题名称
          </div>
          <div
            class="t-drawer__body"
          >
            <p>
              This is a drawer
            </p>
          </div>
          <div
            class="t-drawer__footer"
          >
            <div
              style="display: flex; justify-content: flex-start;"
            >
              <button
                class="t-drawer-confirm t-button t-button--theme-primary t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  确认
                </span>
              </button>
              <button
                class="t-drawer-cancel t-button t-button--theme-default t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  取消
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer-right"
        tabindex="0"
      >
        <div
          class="t-drawer__mask"
        />
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
          style="width: 300px;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            标题名称
          </div>
          <div
            class="t-drawer__body"
          >
            <form
              class="t-form"
            >
              <div
                class="t-form__item"
              >
                <div
                  class="t-form__label t-form__label--right"
                  style="width: 60px;"
                >
                  <label>
                    Label A
                  </label>
                </div>
                <div
                  class="t-form__controls"
                  style="margin-left: 60px;"
                >
                  <div
                    class="t-form__controls--content"
                  >
                    <div
                      class="t-input"
                    >
                      <input
                        class="t-input__inner"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-form__item"
              >
                <div
                  class="t-form__label t-form__label--right"
                  style="width: 60px;"
                >
                  <label>
                    Label B
                  </label>
                </div>
                <div
                  class="t-form__controls"
                  style="margin-left: 60px;"
                >
                  <div
                    class="t-form__controls--content"
                  >
                    <div
                      class="t-input"
                    >
                      <input
                        class="t-input__inner"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            class="t-drawer__footer"
          >
            <div
              style="display: flex; justify-content: flex-start;"
            >
              <button
                class="t-drawer-confirm t-button t-button--theme-primary t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  确认
                </span>
              </button>
              <button
                class="t-drawer-cancel t-button t-button--theme-default t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  取消
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`placement.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="bottom"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
    </div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-left: 16px; position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer-right"
        tabindex="0"
      >
        <div
          class="t-drawer__mask"
        />
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
          style="width: 300px;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__body"
          >
            <p>
              This is a drawer
            </p>
          </div>
          <div
            class="t-drawer__footer"
          >
            <div
              style="display: flex; justify-content: flex-start;"
            >
              <button
                class="t-drawer-confirm t-button t-button--theme-primary t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  确认
                </span>
              </button>
              <button
                class="t-drawer-cancel t-button t-button--theme-default t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  取消
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`popup.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div>
      <span>
        抽屉弹出方向：
      </span>
      <div
        class="t-radio-group t-radio-group-medium t-radio-group-outline"
      >
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="left"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            left
          </span>
        </label>
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="right"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            right
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="top"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            top
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="bottom"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            bottom
          </span>
        </label>
      </div>
    </div>
    <div>
      <span>
        抽屉弹出模式：
      </span>
      <div
        class="t-radio-group t-radio-group-medium t-radio-group-outline"
      >
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="push"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            push
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="overlay"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            overlay
          </span>
        </label>
      </div>
    </div>
    <div>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          Open
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="bottom"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
    </div>
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="small"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          small(300px)
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="medium"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          medium(500px)
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="large"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          large(760px)
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="200"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          200
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="400px"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          400px
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="50%"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          50%
        </span>
      </label>
    </div>
    <div>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          Open
        </span>
      </button>
    </div>
    <div>
      <div
        class="t-drawer t-drawer-right"
        tabindex="0"
      >
        <div
          class="t-drawer__mask"
        />
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
          style="width: 300px;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__body"
          >
            <p>
              This is a drawer
            </p>
          </div>
          <div
            class="t-drawer__footer"
          >
            <div
              style="display: flex; justify-content: flex-start;"
            >
              <button
                class="t-drawer-confirm t-button t-button--theme-primary t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  确认
                </span>
              </button>
              <button
                class="t-drawer-cancel t-button t-button--theme-default t-button--variant-base"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  取消
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
